--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <html>
 
-<head>
-<title>first webpage</title>
+<Head>
+ 	<title> My Biography </title>
+ </Head>
 
-</head>
 
-<body style= "color:red">
-<h1> Hello world!!!! </h1>
- 
-</body>
+	<Body style="color:orange";bgcolor:"black">
+	<h1> ABOUT MYSELF </h1>
+        <p> <b> My Name is Abrar Asef and my family consists of four people. My Mother's name is Lubna Zaman and my father's name is Nazrul Islam. </b> </p>
+	<h2> Here is a picture of me: </h2>
+	<img src="untitled.png">
+	<p> I completed my 'O' Levels at the year 2017 during the month of may. Afterwards, I completed my GED at the year 2018 before i finally got admitted to a university. <br> My hobbies are: </br> </p>
+        <ul>
+            <li> Watching Movies </li>
+            <li> Playing Video Games </li>
+        </ul>
+	<p> My achievements are that when i was a kid i learnt to draw beautifully and participated in many competitions. It is one of my many missions which i have gained success in achieving. <br> Currently, my aim is to study hard so that I can fullfill my future plan of achieving the degree of a computer engineer and achieve the purpose of getting  a job in one of the best companies in the job market. </br> <br> I plan on completing this goal with the help of one of the best universities with an outstanding reputation that i am currently studying in which is United International University (UIU) which helps students in fullfilling their dreams.</br> <br> Just click on the highlighted text below so that it will redirect you to our university's official website so that you can learn how our university helps us in making our dreams come true.</br> </p>
+ 	<a HREF="http://www.uiu.ac.bd">Click Me!!</a>
+	</Body>
 
 
 
