--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         </Head>
 
 
-	<Body style="color:orange";bgcolor:"black">
+	<Body style="color:orange"
 	<h1> ABOUT MYSELF </h1>
         <p> <b> My Name is Abrar Asef and my family consists of four people. My Mother's name is Lubna Zaman and my father's name is Nazrul Islam. </b> </p>
 	<h2> Here is a picture of me: </h2>
-	<img src="untitled.png">
+	<img src="https://github.com/Abrar07/Abrar-/blob/gh-pages/imges/me.jpg">
 	<p> I completed my 'O' Levels at the year 2017 during the month of may. Afterwards, I completed my GED at the year 2018 before i finally got admitted to a university. <br> My hobbies are: </br> </p>
         <ul>
             <li> Watching Movies </li>
